tests/NormalTests/paczka1/fuzzy1/19873389.err
Error in line 12: S122 A824 44,6
Error in line 13: S122 S409 94,2
Error in line 16: UgvwjpB8q A824 98,8
Error in line 14: qFECQXuR S122 16,0
Error in line 31: LPI9dIIk S122 64,3
Error in line 27: S122 S122 60,0
Error in line 34: LPI9dIIk A811 11,2
